force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/Reference_Acct_Mgmt_Retention_Outreach__c.object-meta.xml
<CustomObject>
    <description>Related Reference object to the Reference Account Management Object</description>
    <label>Reference Acct Mgmt Retention Outreach</label>
    <nameField>
        <displayFormat>RAMRO-{00000}</displayFormat>
        <label>Reference Acct Mgmt Retention Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Acct Mgmt Retention Outreaches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>