force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/fields/Annual_Paychex_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Paychex_Revenue__c</fullName>
    <label>Annual Paychex Revenue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>