force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/fields/Assets_Under_Management__c.field-meta.xml
<CustomField>
    <fullName>Assets_Under_Management__c</fullName>
    <formula>Reference_Account_Management__r.Assets_Under_Management__c</formula>
    <label>Assets Under Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>