force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/fields/Products_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Products_Impacted__c</fullName>
    <label>Products Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>401k</fullName>
            </value>
            <value>
                <fullName>S125</fullName>
            </value>
            <value>
                <fullName>HR Solutions</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>