force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <formula>Reference_Account_Management__r.Case_Lookup__r.Account.Name</formula>
    <label>Prospect-Client Name</label>
    <type>Text</type>
</CustomField>