force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/recordTypes/Reference_Acct_Mgmt_Retention_Outreach_Page_Layout.recordType-meta.xml
<RecordType>
    <fullName>Reference_Acct_Mgmt_Retention_Outreach_Page_Layout</fullName>
    <active>true</active>
    <label>Reference Acct Mgmt Retention Outreach Page Layout</label>
</RecordType>