force-app/main/default/objects/Reference_Acct_Mgmt_Retention_Outreach__c/validationRules/Retention_Outreach_Complete.validationRule-meta.xml
<ValidationRule>
    <fullName>Retention_Outreach_Complete</fullName>
    <active>true</active>
    <description>Requires a retention result if retention outreach is complete</description>
    <errorConditionFormula>AND(ISBLANK(TEXT(Retention_Result__c)), NOT(ISBLANK(Retention_Outreach_Complete__c)))</errorConditionFormula>
    <errorMessage>Please enter a Retention Result if the Retention Outreach is complete</errorMessage>
</ValidationRule>